# ashe

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  build.bat
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
include/: ashe.hpp
include/ashe/: aes.h  all.hpp  arch.h  arch.hpp  async_worker.h  at_exit.h  base64.h  base64.hpp  buffer_queue.h  buffer_queue.hpp  byteorder.h  byteorder.hpp  check_failure.h  cmd_line_parse.h  cmd_line_parse.hpp  cmd_line_parser.h  compiler_specific.h  config.h  config.h.in  config.hpp  config.hpp.in  configor.h  configor.hpp  cpp_feature.h  cpp_feature.hpp  crc32.h  crc32.hpp  criticalsection.h  debug.h  driver_info.h  eastl.h  enum_flags.hpp  env_variable.h  event.h  event.hpp  exception_catch.h  file.h  file.hpp  filesystem.h  filesystem.hpp  (+122 more)
include/ashe/EABase/: eabase.h  eahave.h  earesult.h  eastdarg.h  eaunits.h  nullptr.h
include/ashe/EABase/config/: eacompiler.h  eacompilertraits.h
include/ashe/EASTL/: algorithm.h  allocator.h  allocator_malloc.h  any.h  array.h  atomic.h  bit.h  bitset.h  bitvector.h  chrono.h  compare.h  core_allocator_adapter.h  deque.h  finally.h  fixed_allocator.h  fixed_function.h  fixed_hash_map.h  fixed_hash_set.h  fixed_list.h  fixed_map.h  fixed_set.h  fixed_slist.h  fixed_string.h  fixed_substring.h  fixed_vector.h  functional.h  hash_map.h  hash_set.h  heap.h  initializer_list.h  intrusive_hash_map.h  intrusive_hash_set.h  intrusive_list.h  intrusive_ptr.h  iterator.h  linked_array.h  linked_ptr.h  list.h  map.h  memory.h  (+37 more)
include/ashe/EASTL/bonus/: adaptors.h  call_traits.h  compressed_pair.h  fixed_ring_buffer.h  fixed_tuple_vector.h  intrusive_sdlist.h  intrusive_slist.h  list_map.h  lru_cache.h  overloaded.h  ring_buffer.h  sort_extra.h  tuple_vector.h
include/ashe/EASTL/internal/: char_traits.h  config.h  copy_help.h  enable_shared.h  fill_help.h  fixed_pool.h  function.h  function_detail.h  function_help.h  functional_base.h  generic_iterator.h  hashtable.h  in_place_t.h  integer_sequence.h  intrusive_hashtable.h  memory_base.h  move_help.h  pair_fwd_decls.h  piecewise_construct_t.h  red_black_tree.h  smart_ptr.h  thread_support.h  tuple_fwd_decls.h  type_compound.h  type_detected.h  type_fundamental.h  type_pod.h  type_properties.h  type_transformations.h  type_void_t.h
include/ashe/EASTL/internal/atomic/: atomic.h  atomic_casts.h
include/ashe/EASTL/internal/atomic/atomic_macros/: atomic_macros.h
include/ashe/enum_flags/: allow_enum_flags.hpp  enum_flagsfwd.hpp  enum_iterator.hpp
include/ashe/ghc/: filesystem.hpp
include/ashe/json/: config.h  features.h  forwards.h  reader.h  value.h  writer.h
include/ashe/message_loop/: message_loop.h  message_loop_task_runner.h  message_pump.h  message_pump_default.h  message_pump_dispatcher.h  message_pump_win.h  pending_task.h  task_runner.h
include/ashe/win/: criticalsection.h  dbg_trace.h  dll_mt_warning.h  driver_info.h  env_variable.h  exception_catch.h  explorer_util.h  file_property.h  firewall.h  http.h  http_client.h  hwnd_helper.h  hwnd_util.h  icon_helper.h  icon_util.h  ini.h  machine_uuid.h  message_window.h  pe_util.h  persistent_uuid.h  process_finder.h  registry.h  schedule_task.h  service_base.h  service_helper.h  service_util.h  shellink_creator.h  shellink_parser.h  signature.h  timer.h  virtual_key.h
msvc/: compile_all.bat  jhc.sln  jhc.vcxproj  jhc.vcxproj.filters
src/: CMakeLists.txt  aes.cpp  async_worker.cpp  at_exit.cpp  base64.cc  base64.cpp  buffer_queue.cc  buffer_queue.cpp  byteorder.cc  byteorder.cpp  check_failure.cpp  cmd_line_parse.cc  cmd_line_parse.cpp  cmd_line_parser.cpp  configor.cc  configor.cpp  crc32.cc  crc32.cpp  criticalsection.cpp  debug.cpp  driver_info.cpp  eastl.cpp  env_variable.cpp  event.cc  event.cpp  exception_catch.cpp  file.cc  file.cpp  firewall.cpp  hex_encode.cc  hex_encode.cpp  http_util.cc  http_util.cpp  hwnd_helper.cpp  icon_helper.cpp  ini.cpp  ipaddress.cc  ipaddress.cpp  logger.cc  logging.cpp  (+89 more)
src/EASTL/: allocator_eastl.cpp  assert.cpp  atomic.cpp  fixed_pool.cpp  hashtable.cpp  intrusive_list.cpp  numeric_limits.cpp  red_black_tree.cpp  string.cpp  thread_support.cpp
src/json/: json_reader.cpp  json_value.cpp  json_valueiterator.inl  json_writer.cpp
src/message_loop/: message_loop.cpp  message_loop_task_runner.cpp  message_pump.cpp  message_pump_default.cpp  message_pump_win.cpp  pending_task.cpp  task_runner.cpp
src/win/: criticalsection.cpp  dbg_trace.cpp  driver_info.cpp  env_variable.cpp  exception_catch.cpp  explorer_util.cpp  file_property.cpp  firewall.cpp  http.cpp  http_client.cpp  hwnd_helper.cpp  hwnd_util.cpp  icon_helper.cpp  icon_util.cpp  ini.cpp  machine_uuid.cpp  message_window.cpp  persistent_uuid.cpp  process_finder.cpp  registry.cpp  schedule_task.cpp  service_helper.cpp  service_util.cpp  shellink_creator.cpp  shellink_parser.cpp  signature.cpp  timer.cpp  virtual_key.cpp
test/: CMakeLists.txt  ashe-test.aps  ashe-test.rc  cml_parse_testcase.cpp  configor.cpp  configor_testcase.cpp  eastl_testcase.cpp  event.cpp  event_tasecase.cpp  file_testcase.cpp  filesystem_testcase.cpp  hash_testcase.cpp  http_testcase.cpp  ip_testcase.cpp  optional_testcase.cpp  path_util.cpp  path_util_testcase.cpp  process_testcase.cpp  resource.h  shellink_creator_testcase.cpp  shellink_parse_testcase.cpp  shellink_testcase.cpp  singleton_class_testcase.cpp  singleton_process_testcase.cpp  str_encode_testcase.cpp  string_helper.cpp  string_helper_testcase.cpp  t_aes.cpp  t_check_failure.cpp  t_cml_parse.cpp  t_configor.cpp  t_event.cpp  t_hash.cpp  t_http.cpp  t_ip.cpp  t_logging.cpp  t_os_version.cpp  t_path.cpp  t_path_util.cpp  t_persistent_uuid.cpp  (+31 more)
vcpkg_port/ashe/: portfile.cmake  vcpkg.json
